# whisper-ptt

./: CLAUDE.md  README.md  STYLE_EXAMPLES.md  main.py  pyproject.toml  test.py
.github/workflows/: publish.yml
docs/: ctrl-c-leak-investigation.md
