[project]
name = "whisper-ptt"
version = "1.0.1"
description = "Push-to-talk speech-to-text input using OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai-whisper",
    "sounddevice",
    "soundfile",
    "pynput",
]

[project.urls]
Homepage = "https://github.com/xloc/whisper-ptt"
Source = "https://github.com/xloc/whisper-ptt"

[project.scripts]
whisper-ptt = "main:main"
