[project]
name = "whisper-ptt"
dynamic = ["version"]
description = "Push-to-talk speech-to-text input using OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pywhispercpp",
    "sounddevice",
    "soundfile",
    "pynput",
]

[project.urls]
Homepage = "https://github.com/xloc/whisper-ptt"
Source = "https://github.com/xloc/whisper-ptt"

[project.scripts]
whisper-ptt = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]
